<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/movie"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/tv"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_grey_400_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="@null">
        <menu>

        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_grey_500_24dp"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
